2008-05-19  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnneededUnboxingTest.cs: New. Unit tests for 
	AvoidUnneededUnboxingRule

2008-05-17  Sebastien Pouliot  <sebastien@ximian.com>

	* RemoveUnusedLocalVariablesTest.cs: New. Unit tests for
	RemoveUnusedLocalVariablesRule. A bit limited since it depends
	on the compiler removing (or not) the unused variables.

2008-05-11  Andres G. Aragoneses <aaragoneses@novell.com> 

	* Test.Rules.Performance.mdp: Fix references.

2008-04-27  Andres G. Aragoneses  <aaragoneses@novell.com>

	* Test.Rules.Performance.mdp: Updated.

2008-04-27  Jb Evain  <jbevain@novell.com>

	* AvoidUnusedParametersTest.cs: Rule does not apply
	to event callback.

2008-04-26  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidLargeStructureTest.cs: New. Unit tests for 
	AvoidLargeStructureRule.
	* UseTypeEmptyTypesTest.cs: Adapt tests so they works when compiled
	with CSC (which optimized out the previous version).

2008-04-26  Jb Evain  <jbevain@novell.com>

	* UseTypeEmptyTypesTest.cs: New tests for the new UseTypeEmptyTypesRule
	that checks for unecessary creation of empty array of types.
	* Makefile.am: add the new guy to the build.

2008-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* CompareWithStringEmptyEfficientlyTest.cs: New. This replace
	UsingStringLengthInsteadOfCheckingEmptyStringTest.cs with more test
	cases and the new test format.
	* UsingStringLengthInsteadOfCheckingEmptyStringTest.cs: removed

2008-04-20  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs: Add test case using generics.

2008-04-13  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs: Fix some cases (e.g. bad 
	values,	checking ctors instead of methods)... and add new ones. 
	Update tests to new format. 

2008-04-12  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs: Add test case where a private
	method is used in its declaring type's nested type(s) [Cedric Vivier]
